--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -117,7 +117,7 @@
 						<div class="col-sm-6">
 							<div id="my_textarea">
 								<h2 style="float:left;">Ligand Name:</h2>
-								<textarea name=textarea_l id=ligand_text ng-model="ligandtext" rows="1" cols="40" placeholder="Enter Ligand name" style="width:100%;"></textarea>
+								<textarea name=textarea_l id=ligand_text ng-model="ligandtext" rows="1" cols="40" placeholder="Enter Ligand name or InChi key" style="width:100%;"></textarea>
 								<h2 style="float:left;">Common Ligands:</h2>
 							<div style="margin-bottom:10px">
 								<select class="extra" id="CommonLigands" ng-click="LigandSelected()" ng-model="commonLigands" size="6" style="width:100%; height: 150px">
