--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -37,7 +37,7 @@
 
     <div>
       <u1 class="nav navbar-nav">
-        <li class="active"><a href="" ng-click="home='true'">Home</a></li>
+        <li class="active"><a href="" ng-click="backtoHome()">Home</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">RAMPs<span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -69,7 +69,7 @@
         <li><a href="#">About</a></li>
       </u1>
         <a class='btn btn-primary btn-lg' id='export_button' href='#' ng-hide="home"role='button'>Export Results<span class='caret'></span></a>
-        <a class='btn btn-primary btn-lg' id='export_button' href='' ng-hide="home" ng-click="home='true'";' role='button'>Search Again</a>
+        <a class='btn btn-primary btn-lg' id='export_button' href='' ng-hide="home"  ng-click="backtoHome()";' role='button'>Search Again</a>
     </div>
 
   </div>
@@ -121,7 +121,7 @@
 								<textarea name=textarea_l id=ligand_text ng-model="ligandtext" rows="1" cols="40" placeholder="Enter Ligand name or InChi key" style="width:100%;"></textarea>
 								<h2 style="float:left;">Common Ligands:</h2>
 							<div style="margin-bottom:10px">
-								<select class="extra" id="CommonLigands" ng-click="LigandSelected()" ng-model="commonLigands" size="6" style="width:100%; height: 150px">
+								<select id="CommonLigands" ng-click="LigandSelected()" ng-model="commonLigands" size="6" style="width:100%; height: 150px">
 									<option>Adrenomedullin</option>
 									<option>Intermedin</option>
 									<option>Amylin</option>
@@ -170,7 +170,7 @@
   </div>
 </div>
 </div>
-<div id="total_results" ng-hide="home" ng-hide="main_loading">
+<div id="total_results"  ng-show="protein_page && !home">
         <div class='container-fluid' id='results_page'>
                 <div id='summary'>
                 <h1 id='results_h1'>Summary:</h1>
@@ -196,6 +196,63 @@
 	<div id='right_float'>
 		<h3 id="results_h1">Best Match:</h3>
         	<div id="sequence">
+        	</div>
+                <h3 id='summary_h3'><span style=font-weight:bold>Organism:</span>
+		{{ organism }}  
+		</h3>
+                <h3 id='summary_h3'><span style=font-weight:bold>Source Link:</span>
+		<a ng-href="{{ url }}">{{ url }}</a>
+		</h3>
+	</div>
+        <div class='container-fluid' id='results_page_int'>
+                <h1 id='results_h1' style='float:left; display:block;'>Known {{ family_short }} Interactions:</h1>
+                <table border='1' style='margin-left:auto; margin-right:auto; width:100%; margin-top: 5%; margin-bottom:1%;'>
+             	<tr>
+			<th>Phenotype</th>
+			<th>Protein</th>
+			<th>Ligand</th>
+		</tr>
+		<tr id='interactions_tr' ng-repeat="(phenotype,object) in interactions">
+			<td> {{ phenotype }} </td>
+			<td> {{ object.gpcr }} </td>
+			<td> {{ object.ligand }} </td>
+		</tr>
+		</table>
+        </div>
+               {% endverbatim %}
+
+</div>
+</div>
+
+<div id="total_results" ng-show="ligand_page && !home">
+        <div class='container-fluid' id='results_page'>
+                <div id='summary'>
+                <h1 id='results_h1'>Summary:</h1>
+                <h3 style='margin-top:3%' id='summary_h3'><span style=font-weight:bold>Found Match for Query:</span>
+                {% verbatim %}
+		{{ query_name }}
+                </h3>
+                <h3 id='summary_h3'><span style=font-weight:bold>Match Name:</span>
+		{{ match_name }}
+		</h3>
+                <h3 id='summary_h3'><span style=font-weight:bold>PubChem ID:</span>
+		{{ chem_id }}
+		</h3>
+                <h3 id='summary_h3'><span style=font-weight:bold>Molecular Formula:</span>
+		{{ molecular_formula }}
+		</h3>
+                <h3 id='summary_h3'><span style=font-weight:bold>Molecular Weight:</span>
+		{{ molecular_weight }}
+		</h3>
+                <h3 id='summary_h3'><span style=font-weight:bold>InChi Key:</span>
+		{{ inchi_key }}
+		</h3>
+
+        </div>
+
+	<div id='right_float'>
+		<h3 id="results_h1">Best Match:</h3>
+        	<div id="image_area">
         	</div>
                 <h3 id='summary_h3'><span style=font-weight:bold>Organism:</span>
 		{{ organism }}  
