--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -252,8 +252,9 @@
 
 	<div id='right_float'>
 		<h3 id="results_h1">Best Match:</h3>
-        	<div id="image_area">
-        	</div>
+		<div id="image_area">
+			<img ng-src="{{ ligand_img }}"/>
+		</div>
                 <h3 id='summary_h3'><span style=font-weight:bold>Organism:</span>
 		{{ organism }}  
 		</h3>
