--- a/core/static/bootstrap/css/bootstrap.css
+++ b/core/static/bootstrap/css/bootstrap.css
@@ -1207,7 +1207,7 @@ body {
 #export_button {
     background-color: steelblue;
     width: 14%;
-    float: right;
+    float:right;
     margin-right: 1%;
     line-height: 16px;
     color: white;
@@ -1215,6 +1215,9 @@ body {
     box-shadow: black 2px;
     box-shadow: 1px 1px 0px #000;
     margin-top:.4%;
+}
+#top_buttons{
+	float:right;
 }
 input,
 button,
