--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -53,7 +53,7 @@
 		<br>
 		<div id="about_text" class="col-sm-6">
 			<h2><span style=font-weight:bold>RampDB:</span></h2>
-			<p>The goal of RampDB is to serve as a central repository for exploring currently-known and predicting RAMP interactions. RampDB itself is a MySQL database
+			<p>The goal of RampDB is to serve as a central repository for exploring currently known and predicting RAMP interactions. RampDB itself is a MySQL database
 				with the following data model. 
 			</p>
 			<br>
@@ -67,7 +67,7 @@
 			</p>
 		</div>
 		<div class="col-sm-6">
-			<img class="img-responsive" src="{% static 'rampdb.png' %}"/>
+			<img class="img-responsive" style="width:95%"src="{% static 'rampdb.png' %}"/>
 		</div>
 	</div>
 	<hr>
