--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -65,7 +65,7 @@
       <p>1. Exploring known information regarding RAMPs, GPCRs and associated ligands</p>
       <p>2. Predicting potential RAMP interactions with your sequence or ligand</p>
       <p>3. Visualizing currently known interactions between RAMPs, GPCRs and ligands</p>
-      <a class="btn btn-primary btn-lg" id="learn_button" href="#" role="button">Learn more &raquo;</a>
+      <a class="btn btn-primary btn-lg" id="learn_button" href="{% url 'about' %}" role="button">Learn more &raquo;</a>
 	  </div>
     </div>
   </div>
@@ -80,8 +80,7 @@
 							<div style="float:right" class="dropdown">
 								<button type="button" class="btn btn-primary btn-lg dropdown-toggle" data-toggle="dropdown"  aria-haspopup="false" aria-expanded="false" name="example_ramp" id="example_button" role="button">Example <span class="caret"></span></button>
 									<ul class="dropdown-menu" role="menu" aria-labelledby="example_button">
-										<li><a href="" ng-click="Example()">Perfect Match</a></li>
-										<li><a href="">Decent Match</a></li>
+										<li><a href="" ng-click="Example()">Strong Match</a></li>
 										<li><a href="">Weak Match</a></li>
 									</ul>
 							</div>
@@ -101,7 +100,7 @@
 									<option>Intermedin</option>
 									<option>Amylin</option>
 									<option>Calcitonin Gene-Related Peptide</option>
-									<option>Vasoactive Intestinal Peptide</option>
+									<option>Vasoactive Intestinal Polypeptide</option>
 									<option>Tuberoinfundibular Peptide</option>
 								</select>
 							</div>
@@ -157,39 +156,58 @@
 		{{ family }} ({{ family_short }}) 
 		</h3>
                 <div ng-show="highConf">
-			<h3 id='summary_h3'><span style=font-weight:bold>Confidence:</span><span style=color:green> 
+			<h3 id='summary_h3'><span style=font-weight:bold>Identity with interacting domain: </span><span style=color:green> 
 			{{ confidence }}% </h3>
-                	<h3 id='summary_h3'><span style=font-weight:bold>Confidence Level:</span><span style=color:green> High</span></h3>
+                <h3 id='summary_h3'><span style=font-weight:bold>E-Value with interacting domain: </span>
+		<span style="color:green">{{ eval }}</span>  
+		</h3>		
+                <h3 id='summary_h3'><span style=font-weight:bold>Max Score with interacting domain: </span>
+		<span style="color:green">{{ max_score }}</span>
+		</h3>
 		</div>
                 <div ng-hide="highConf">
-			<h3 id='summary_h3'><span style=font-weight:bold>Confidence:</span><span style=color:red> 
+			<h3 id='summary_h3'><span style=font-weight:bold>Identity with interacting domain: </span><span style=color:red> 
 			{{ confidence }}% </h3>
-                	<h3 id='summary_h3'><span style=font-weight:bold>Confidence Level:</span><span style=color:red> Low</span></h3>
+                <h3 id='summary_h3'><span style=font-weight:bold>E-Value with interacting domain: </span>
+		<span style="color:red">{{ eval }}</span>  
+		</h3>		
+                <h3 id='summary_h3'><span style=font-weight:bold>Max Score with interacting domain: </span>
+		<span style="color:red">{{ max_score }}</span>
+		</h3>		
 		</div>
         </div>
 
 	<div id='right_float'>
-		<h3 id="results_h1">Best Match:</h3>
+		<h3 id="results_h1">Sequence Alignment to Domain:</h3>
         	<div id="sequence">
         	</div>
-                <h3 id='summary_h3'><span style=font-weight:bold>Organism:</span>
-		{{ organism }}  
-		</h3>		
-                <h3 id='summary_h3'><span style=font-weight:bold>Source Link:</span>
-		<a ng-href="{{ url }}">{{ url }}</a>
-		</h3>
 	</div>
-        <div class='container-fluid' id='results_page_int'>
+        <div ng-show="ramp_quer" class='container-fluid' id='results_page_int'>
                 <h1 id='results_h1' style='float:left; display:block;'>Known {{ family_short }} Interactions:</h1>
                 <table border='1' style='margin-left:auto; margin-right:auto; width:100%; margin-top: 5%; margin-bottom:1%;'>
              	<tr>
 			<th>Phenotype</th>
-			<th>Protein</th>
+			<th>GPCR</th>
 			<th>Ligand</th>
 		</tr>
 		<tr id='interactions_tr' ng-repeat="(phenotype,object) in interactions">
 			<td> {{ phenotype }} </td>
-			<td> {{ object.gpcr }} </td>
+			<td> {{ object.prot }} </td>
+			<td> {{ object.ligand }} </td>
+		</tr>
+		</table>
+        </div>
+        <div ng-hide="ramp_quer" class='container-fluid' id='results_page_int'>
+                <h1 id='results_h1' style='float:left; display:block;'>Known {{ family_short }} Interactions:</h1>
+                <table border='1' style='margin-left:auto; margin-right:auto; width:100%; margin-top: 5%; margin-bottom:1%;'>
+             	<tr>
+			<th>Phenotype</th>
+			<th>RAMP</th>
+			<th>Ligand</th>
+		</tr>
+		<tr id='interactions_tr' ng-repeat="(phenotype,object) in interactions">
+			<td> {{ phenotype }} </td>
+			<td> {{ object.prot }} </td>
 			<td> {{ object.ligand }} </td>
 		</tr>
 		</table>
@@ -214,7 +232,7 @@
 		{{ chem_id }}
 		</h3>
                 <h3 id='summary_h3'><span style=font-weight:bold>Molecular Formula: </span><span ng-bind-html="molecular_formula"></span>
-		</h3>
+ 		</h3>
                 <h3 id='summary_h3'><span style=font-weight:bold>Molecular Weight:</span>
 		{{ molecular_weight }} g/mol
 		</h3>
@@ -245,7 +263,7 @@
 			<th>RAMP</th>
 		</tr>
 		<tr id='interactions_tr' ng-repeat="(phenotype,object) in interactions">
-			<td> {{ phenotype }} </td>
+			<td> {{ object.name }} </td>
 			<td> {{ object.gpcr }} </td>
 			<td> {{ object.ramp }} </td>
 		</tr>
