--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -189,11 +189,24 @@
 			<th>Phenotype</th>
 			<th>GPCR</th>
 			<th>Ligand</th>
+			<th>Function</th>
+			<th>Sources</th>
 		</tr>
-		<tr id='interactions_tr' ng-repeat="(phenotype,object) in interactions">
-			<td> {{ phenotype }} </td>
-			<td> {{ object.prot }} </td>
-			<td> {{ object.ligand }} </td>
+		<tr id='interactions_tr' ng-repeat-start="(phenotype,object) in interactions track by $index">
+				<td> {{ phenotype }} </td>
+				<td> {{ object.prot }} </td>
+				<td> {{ object.ligand }} </td>
+				<td ng-init="hide_func = true"> 
+					<button ng-show="hide_func" ng-click="hide_func = false">+</button>
+				 	<button ng-hide="hide_func" ng-click="hide_func = true">-</button>
+				</td>
+				<td ng-init="hide_sources = true">
+					<button ng-show="hide_sources" ng-click="hide_sources = false">+</button>
+				 	<button ng-hide="hide_sources" ng-click="hide_sources = true">-</button>
+				</td>
+		</tr>
+		<tr ng-repeat-end>
+			<td id="interactions_tr" ng-if="!hide_func" colspan="5"> 1 </td>
 		</tr>
 		</table>
         </div>
@@ -204,13 +217,26 @@
 			<th>Phenotype</th>
 			<th>RAMP</th>
 			<th>Ligand</th>
+			<th>Function</th>
+			<th>Sources</th>
 		</tr>
-		<tr id='interactions_tr' ng-repeat="(phenotype,object) in interactions">
+		<tr id='interactions_tr' ng-repeat-start="(phenotype,object) in interactions track by $index">
 			<td> {{ phenotype }} </td>
 			<td> {{ object.prot }} </td>
 			<td> {{ object.ligand }} </td>
+			<td ng-init="hide_func = true"> 
+				<button ng-show="hide_func" ng-click="hide_func = false">+</button>
+				<button ng-hide="hide_func" ng-click="hide_func = true">-</button>
+			</td>
+			<td ng-init="hide_sources = true">
+				<button ng-show="hide_sources" ng-click="hide_sources = false">+</button>
+				<button ng-hide="hide_sources" ng-click="hide_sources = true">-</button>
+			</td>
 		</tr>
-		</table>
+		<tr ng-repeat-end>
+			<td id="interactions_tr" ng-if="!hide_func" colspan="5"> 1 </td>
+		</tr>
+		</table>		
         </div>
                {% endverbatim %}
 
@@ -255,17 +281,31 @@
 		</div>
 	</div>
         <div class='container-fluid' id='results_page_int'>
-                <h1 id='results_h1' style='float:left; display:block;'>Known {{ family_short }} Interactions:</h1>
+                <h1 id='results_h1' style='float:left; display:block;'>Known {{ match_name }} RAMP Interactions:</h1>
                 <table border='1' style='margin-left:auto; margin-right:auto; width:100%; margin-top: 5%; margin-bottom:1%;'>
              	<tr>
 			<th>Phenotype</th>
 			<th>GPCR</th>
 			<th>RAMP</th>
+			<th>Function</th>
+			<th>Sources</th>
+
 		</tr>
-		<tr id='interactions_tr' ng-repeat="(phenotype,object) in interactions">
+		<tr id='interactions_tr' ng-repeat-start="(phenotype,object) in interactions track by $index">
 			<td> {{ object.name }} </td>
 			<td> {{ object.gpcr }} </td>
 			<td> {{ object.ramp }} </td>
+			<td ng-init="hide_func = true"> 
+				<button ng-show="hide_func" ng-click="hide_func = false">+</button>
+				<button ng-hide="hide_func" ng-click="hide_func = true">-</button>
+			</td>
+			<td ng-init="hide_sources = true">
+				<button ng-show="hide_sources" ng-click="hide_sources = false">+</button>
+				<button ng-hide="hide_sources" ng-click="hide_sources = true">-</button>
+			</td>
+		</tr>
+		<tr ng-repeat-end>
+			<td id="interactions_tr" ng-if="!hide_func" colspan="5"> 1 </td>
 		</tr>
 		</table>
         </div>
