--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -41,7 +41,8 @@
         <li class="active"><a href="{% url 'index' %}" ng-click="backtoHome()">Home</a></li>
         <li><a href="{% url 'info' %}">RAMP Information</a></li>
         <li><a href="{% url 'about' %}">About</a></li>
-        <li><a href="{% url 'contact' %}">Contact</a></li>
+        <li><a ng-href="http://jordan.biology.gatech.edu/page/">Contact</a></li>
+
       </u1>
         <a class='btn btn-primary btn-lg' id='export_button' href='#' ng-hide="home"role='button'>Export Results</a>
         <a class='btn btn-primary btn-lg' id='export_button' href='' ng-hide="home"  ng-click="backtoHome()" role='button'>Search Again</a>
