--- a/core/static/bootstrap/css/bootstrap.css
+++ b/core/static/bootstrap/css/bootstrap.css
@@ -2473,6 +2473,11 @@ th {
      font-size: 17px;
      text-align: center;
  }
+ #interactions_th {
+     font-size: 20px;
+     font-weight: bold;
+     text-align: center;
+ }
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
   border-bottom-width: 2px;
